--- a/google_books/css/style.css
+++ b/google_books/css/style.css
@@ -1,3 +1,11 @@
+body {
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .center {
   margin: auto;
   margin-top: 200px;
